update token methode has been added
